Fixed More dropdown z-index clipping and hid mobile scrollbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -48,3 +48,16 @@ body {
   user-select: none;
   /* Standard syntax */
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scrollbar {
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
+}
